@@ -1,23 +1,26 @@
 package com.eletroficinagalvao.controledeservico.Service;
 
-import com.eletroficinagalvao.controledeservico.Exception.NotFoundException;
+import com.eletroficinagalvao.controledeservico.Exception.InternalServerErrorException;
 import com.eletroficinagalvao.controledeservico.Repository.OSRepository;
-import com.eletroficinagalvao.controledeservico.Util.AppProperties;
+import com.google.auth.Credentials;
+import com.google.auth.oauth2.GoogleCredentials;
+import com.google.cloud.storage.BlobId;
+import com.google.cloud.storage.BlobInfo;
+import com.google.cloud.storage.Storage;
+import com.google.cloud.storage.StorageOptions;
 import lombok.Getter;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.*;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.sql.SQLDataException;
-import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Random;
-import java.util.zip.ZipEntry;
-import java.util.zip.ZipOutputStream;
 
 @Service
 public class ImageService {
@@ -27,49 +30,65 @@ public class ImageService {
 
     @Getter
     private String method;
-    private String diretorioUsuario;
 
-    private Random random = new Random();
+    private final Random random = new Random();
 
-    //private static String diretorio = "C:/Users/%s/Pictures".formatted(System.getProperty("user.name"));
-    private static String diretorio = AppProperties.get("storage.path");
-
-    @Autowired
-    private OSRepository repository;
-
-    public String readImage(int id, List<MultipartFile> imagens, int method) {
+    public List<String> uploadImage(int id, List<MultipartFile> imagens, int method) {
         setMethod(method);
 
+        List<String> images = new LinkedList<>();
         try {
-
-            diretorioUsuario = Files.createDirectories(Path.of(diretorio + "\\OrdensDeServicos\\ImagensOS\\%d\\%s".formatted(id, getMethod())))
-                    .toString();
+            InputStream credentialsStream = ImageService.class.getClassLoader().getResourceAsStream("eletroficina-galvao-storage-firebase-adminsdk-31szq-ab6423537a.json");
+            Credentials credentials = GoogleCredentials.fromStream(credentialsStream);
+            Storage storage = StorageOptions.newBuilder().setCredentials(credentials).build().getService();
 
             byte[] buffer = new byte[4096];
             int bytesRead;
 
-            for(MultipartFile e: imagens) {
+            for (MultipartFile e : imagens) {
 
-                try (
-                        InputStream inputStream = e.getInputStream();
-                        OutputStream outputStream = new FileOutputStream(new File(diretorioUsuario + "\\%d_%d.jpg".formatted(id, random.nextInt(1000, 9999))))
-                ) {
+                File tempFile = new File(String.format("%d_%d", id, random.nextInt(1000, 9999)));
 
-                    while ((bytesRead = inputStream.read(buffer)) > 0) {
-                        outputStream.write(buffer, 0, bytesRead);
-                    }
-                    outputStream.flush();
+                InputStream inputStream = e.getInputStream();
+                OutputStream outputStream = new FileOutputStream(tempFile);
 
-                } catch (IOException ex) {
-                    ex.printStackTrace();
+
+                while ((bytesRead = inputStream.read(buffer)) > 0) {
+                    outputStream.write(buffer, 0, bytesRead);
                 }
+                outputStream.flush();
 
+
+                String filePath = String.format("Imagens/%d/%s/%s", id, this.method, tempFile.getName().concat(e.getOriginalFilename().substring(e.getOriginalFilename().lastIndexOf("."))));
+
+                BlobId blobId = BlobId.of("eletroficina-galvao-storage.appspot.com", filePath);
+                BlobInfo blobInfo = getExtensionFromBlob(blobId);
+                storage.create(blobInfo, Files.readAllBytes(tempFile.toPath()));
+
+                inputStream.close();
+                outputStream.close();
+                storage.close();
+
+                images.add("https://firebasestorage.googleapis.com/v0/b/eletroficina-galvao-storage.appspot.com/o/%s?alt=media"
+                        .formatted(filePath.replace("/", "%2F")));
+
+                Files.delete(tempFile.toPath());
             }
-
         } catch (IOException e) {
-            e.printStackTrace();
+            throw new InternalServerErrorException(e.getMessage());
+        } catch (Exception e) {
+            throw new InternalServerErrorException(e.getMessage());
         }
-        return diretorioUsuario;
+        return images;
+    }
+
+    private BlobInfo getExtensionFromBlob(BlobId blobId){
+        String fileExtension = blobId.getName().substring(blobId.getName().lastIndexOf("."));
+
+        if(fileExtension.contains("jpg")){
+            return BlobInfo.newBuilder(blobId).setContentType("image/jpeg").build();
+        }
+        return BlobInfo.newBuilder(blobId).setContentType("image/png").build();
     }
 
     private void setMethod(int method) {
@@ -82,51 +101,4 @@ public class ImageService {
         }
     }
 
-    // Depois
-//    public File getImageById(int id) {
-//        File zipTemp = new File("imagens_%d.zip".formatted(id));
-//        try {
-//            verify(id);
-//
-//            zipTemp.createNewFile();
-//
-//            List<File> fotos = Arrays.stream(Path.of(diretorioUsuario)
-//                            .toFile()
-//                            .listFiles())
-//                    .toList();
-//
-//            ZipOutputStream zipOutputStream = new ZipOutputStream(new FileOutputStream(zipTemp));
-//            for (File e : fotos) {
-//                try (InputStream inputStream = new FileInputStream(e)) {
-//
-//                    byte[] buffer = new byte[8192];
-//                    int bytesRead;
-//
-//                    zipOutputStream.putNextEntry(new ZipEntry(e.getName()));
-//
-//                    while ((bytesRead = inputStream.read(buffer)) != -1) {
-//                        zipOutputStream.write(buffer, 0, bytesRead);
-//                    }
-//
-//                }
-//            }
-//            zipOutputStream.close();
-//
-//        } catch (IOException ex) {
-//            ex.printStackTrace();
-//        } catch (SQLDataException ex) {
-//            ex.printStackTrace();
-//        }
-//        return zipTemp;
-//    }
-
-    public void delete(int id){
-        try {
-            String a =  diretorio + "/OrdensDeServicos/ImagensOS/%s".formatted(id);
-
-            Files.delete(Path.of(a));
-        } catch (IOException e){
-            e.printStackTrace();
-        }
-    }
 }
